--- a/locale/tr/LC_MESSAGES/django.po
+++ b/locale/tr/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-06 01:39+0300\n"
+"POT-Creation-Date: 2024-03-06 21:59+0300\n"
 "PO-Revision-Date: 2023-06-22 18:43+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1725,17 +1725,14 @@ msgid "С новым годом!"
 msgstr "Mutlu Noeller ve Mutlu yıllar!"
 
 #: player/templates/player/redesign/lists/skill_top.html:26
-#: player/templates/player/redesign/overview_skills.html:21
 msgid "Сила"
 msgstr "Kuvvet"
 
 #: player/templates/player/redesign/lists/skill_top.html:41
-#: player/templates/player/redesign/overview_skills.html:70
 msgid "Интеллект"
 msgstr "Zeka"
 
 #: player/templates/player/redesign/lists/skill_top.html:56
-#: player/templates/player/redesign/overview_skills.html:119
 msgid "Выносливость"
 msgstr "Dayanıklılık"
 
@@ -1743,6 +1740,11 @@ msgstr "Dayanıklılık"
 msgctxt "menu"
 msgid "обзор"
 msgstr "genel bakış"
+
+#: player/templates/player/redesign/menu.html:35
+msgctxt "menu"
+msgid "статьи"
+msgstr ""
 
 #: player/templates/player/redesign/menu.html:46
 msgctxt "menu"
@@ -1880,10 +1882,22 @@ msgctxt "overview"
 msgid "парламент"
 msgstr "parlamento"
 
+#: player/templates/player/redesign/overview_skills.html:21
+#: skill/models/coherence.py:19 skill/models/excavation.py:14
+#: skill/models/finance.py:14 skill/models/scouting.py:19
+#, fuzzy
+#| msgid "Сила"
+msgctxt "skills"
+msgid "Сила"
+msgstr "Kuvvet"
+
 #: player/templates/player/redesign/overview_skills.html:24
 #: player/templates/player/redesign/overview_skills.html:73
 #: player/templates/player/redesign/overview_skills.html:122
 #: player/templates/player/redesign/overview_skills.html:186
+#, fuzzy
+#| msgid "Завершение"
+msgctxt "skills"
 msgid "Завершение"
 msgstr "Tamamlama"
 
@@ -1914,8 +1928,31 @@ msgstr "işlemde..."
 #: player/templates/player/redesign/overview_skills.html:64
 #: player/templates/player/redesign/overview_skills.html:113
 #: player/templates/player/redesign/overview_skills.html:162
+#, fuzzy
+#| msgid "изучить"
+msgctxt "skills"
 msgid "изучить"
 msgstr "beceriyi artır"
+
+#: player/templates/player/redesign/overview_skills.html:70
+#: skill/models/coherence.py:24 skill/models/excavation.py:19
+#: skill/models/finance.py:19 skill/models/fracturing.py:14
+#: skill/models/military_production.py:14 skill/models/scouting.py:24
+#: skill/models/standardization.py:14
+#, fuzzy
+#| msgid "Интеллект"
+msgctxt "skills"
+msgid "Интеллект"
+msgstr "Zeka"
+
+#: player/templates/player/redesign/overview_skills.html:119
+#: skill/models/excavation.py:24 skill/models/finance.py:24
+#: skill/models/fracturing.py:19 skill/models/scouting.py:29
+#, fuzzy
+#| msgid "Выносливость"
+msgctxt "skills"
+msgid "Выносливость"
+msgstr "Dayanıklılık"
 
 #: player/templates/player/redesign/overview_skills.html:172
 msgctxt "skills"
@@ -1923,26 +1960,33 @@ msgid "дерево навыков"
 msgstr "yetenek ağacı"
 
 #: player/templates/player/redesign/overview_skills.html:177
-msgctxt "skill_cancel"
+#, fuzzy
+#| msgctxt "skill_cancel"
+#| msgid "Отмена изучения навыка"
+msgctxt "skills"
 msgid "Отмена изучения навыка"
 msgstr "Beceri yükseltme iptal"
 
 #: player/templates/player/redesign/overview_skills.html:178
-msgctxt "skill_cancel"
+#, fuzzy
+#| msgctxt "skill_cancel"
+#| msgid "Изучение навыка будет отменено. Продолжить?"
+msgctxt "skills"
 msgid "Изучение навыка будет отменено. Продолжить?"
 msgstr "Beceri yükseltme iptal edilecek. İptale devam edilsin mi?"
 
 #: player/templates/player/redesign/overview_skills.html:179
 #, fuzzy
+#| msgctxt "has_party"
 #| msgid "Продолжить"
-msgctxt "skill_cancel"
+msgctxt "skills"
 msgid "Продолжить"
 msgstr "Devam et"
 
 #: player/templates/player/redesign/overview_skills.html:180
 #, fuzzy
 #| msgid "Отмена"
-msgctxt "skill_cancel"
+msgctxt "skills"
 msgid "Отмена"
 msgstr "İptal etme"
 
@@ -2782,6 +2826,93 @@ msgstr "Otomatik madencilik hatası"
 msgctxt "mining"
 msgid "Неизвестный тип ресурса"
 msgstr "Bilinmeyen kaynak türü"
+
+#: skill/models/coherence.py:14
+msgctxt "skills"
+msgid "бонус 10% за каждый вид юнитов, количество которых в отряде не менее 20%"
+msgstr ""
+
+#: skill/models/coherence.py:60
+#, fuzzy
+#| msgctxt "has_party"
+#| msgid "Должность"
+msgctxt "skills"
+msgid "Слаженность"
+msgstr "Konum"
+
+#: skill/models/excavation.py:9
+msgctxt "skills"
+msgid "позволяет извлекать дополнительные 10% руд за уровень"
+msgstr ""
+
+#: skill/models/excavation.py:37
+#, fuzzy
+#| msgctxt "trading"
+#| msgid "Выбранная категория"
+msgctxt "skills"
+msgid "Промышленная экскавация"
+msgstr "Seçilen kategori"
+
+#: skill/models/finance.py:9
+msgctxt "skills"
+msgid "позволяет получать двойное финансирование при прохождении прогрессии"
+msgstr ""
+
+#: skill/models/finance.py:33
+#, fuzzy
+#| msgid "На финансирование"
+msgctxt "skills"
+msgid "Подпольное финансирование"
+msgstr "Finansman için"
+
+#: skill/models/fracturing.py:9
+msgctxt "skills"
+msgid "позволяет извлекать дополнительные 10% нефти за уровень"
+msgstr ""
+
+#: skill/models/fracturing.py:32
+msgctxt "skills"
+msgid "Гидроразрыв"
+msgstr ""
+
+#: skill/models/military_production.py:9
+msgctxt "skills"
+msgid "Добавляет возможность произвести дополнительные войска при тех же затратах энергии, с округлением затрат в большую сторону"
+msgstr ""
+
+#: skill/models/military_production.py:19 skill/models/standardization.py:23
+#, fuzzy
+#| msgctxt "storage_assets"
+#| msgid "Активация"
+msgctxt "skills"
+msgid "Стандартизация"
+msgstr "Aktivasyon"
+
+#: skill/models/military_production.py:28
+#, fuzzy
+#| msgctxt "menu"
+#| msgid "производство"
+msgctxt "skills"
+msgid "Режимное производство"
+msgstr "üretim"
+
+#: skill/models/scouting.py:14
+msgctxt "skills"
+msgid "бонус к урону 2% за уровень, если с момента прилёта игрока в регион прошло более суток"
+msgstr ""
+
+#: skill/models/scouting.py:44
+#, fuzzy
+#| msgctxt "party_manage"
+#| msgid "название должности"
+msgctxt "skills"
+msgid "Знание местности"
+msgstr "pozisyon unvanı"
+
+#: skill/models/standardization.py:9
+msgctxt "skills"
+msgid "Добавляет возможность произвести дополнительные материалы при тех же затратах энергии, с округлением затрат в большую сторону"
+msgstr ""
 
 #: skill/views/skill_cancel.py:34
 msgid "ID навыка должен быть числом"
@@ -4276,6 +4407,18 @@ msgstr ""
 msgctxt "lists"
 msgid "Урон за сторону:"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Продолжить"
+#~ msgctxt "skill_cancel"
+#~ msgid "Продолжить"
+#~ msgstr "Devam et"
+
+#, fuzzy
+#~| msgid "Отмена"
+#~ msgctxt "skill_cancel"
+#~ msgid "Отмена"
+#~ msgstr "İptal etme"
 
 #~ msgid "no_border_regions"
 #~ msgstr "sınır bölgesi yok"
